增加基础代码

--- a/service-jdbc/pom.xml
+++ b/service-jdbc/pom.xml
@@ -36,6 +36,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
+        <!--设置切面aop-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
         <!-- swagger2 api 页面 -->
 
         <dependency>
